# JuML

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cpplint.py
datasets/: create_iris_ann.txt  iris.h5  iris_ann.h5  mpi_ranks.h5  random_class_labels.h5  rownumInColumns5x3.h5
doc/: Doxyfile
executables/: CMakeLists.txt
executables/ann/: CMakeLists.txt  ann.cpp
executables/ann-indian/: CMakeLists.txt  ann-indian.cpp
executables/ann-mnist/: CMakeLists.txt  ann-mnist.cpp
executables/ann-rome/: CMakeLists.txt  ann-rome.cpp
executables/ann-test/: CMakeLists.txt  ann-test.cpp
executables/ann-train-classifier/: CMakeLists.txt  ann-train-classifier.cpp
include/: JuML.h
include/classification/: ANN.h  ANNActivations.h  ANNLayers.h  BaseClassifier.h  CART.h  GaussianNaiveBayes.h  neural_network.h
include/clustering/: BaseClusterer.h  KMeans.h  k_means.h
include/core/: Algorithm.h  Backend.h  Definitions.h  HDF5.h  MPI.h  MPIHelper.h  Test.h
include/data/: DataSet.h  Dataset.h
include/preprocessing/: ClassNormalizer.h
include/spatial/: Distances.h
include/stats/: Distributions.h
include/svm/: BinarySVC.h  Kernel.h  KernelCache.h  QMatrix.h  SVCKernel.h  SVM.h  Solver.h
include/util/: Settings.h
include/utils/: operations.h
python/: CMakeLists.txt  JuML.i  armanpy.hpp  armanpy_1d.i  arrayfire.i  arrayfire_converter.h
scripts/: createClass  createTest  create_class  create_test
src/: CMakeLists.txt
src/classification/: ANN.cpp  BaseClassifier.cpp  CART.cpp  CMakeLists.txt  GaussianNaiveBayes.cpp  main.cpp  neural_network.cpp  test
src/clustering/: BaseClusterer.cpp  CMakeLists.txt  KMeans.cpp  k_means.cpp
src/core/: Algorithm.cpp  Backend.cpp  CMakeLists.txt  Definitions.cpp  HDF5.cpp  MPI.cpp
src/data/: CMakeLists.txt  DataSet.cpp  Dataset.cpp
src/preprocessing/: CMakeLists.txt  ClassNormalizer.cpp
src/spatial/: CMakeLists.txt  Distances.cpp
src/stats/: CMakeLists.txt  Distributions.cpp  distributions.cpp
src/svm/: BinarySVC.cpp  CMakeLists.txt  SVM.cpp  Solver.cpp
src/util/: CMakeLists.txt  Settings.cpp
tests/: CMakeLists.txt
tests/classification/: ANN.cpp  CART.cpp  CMakeLists.txt  GaussianNaiveBayes.cpp  neural_network.cpp
tests/clustering/: CMakeLists.txt  KMeans.cpp
tests/core/: CMakeLists.txt  HDF5.cpp  MPI.cpp
tests/data/: CMakeLists.txt  DataSet.cpp  Dataset.cpp
tests/preprocessing/: CMakeLists.txt  ClassNormalizer.cpp
tests/spatial/: CMakeLists.txt  Distances.cpp
tests/stats/: CMakeLists.txt  Distributions.cpp
tests/svm/: BinarySVC.cpp  CMakeLists.txt  Kernel.cpp  KernelCache.cpp
