FIND_PACKAGE(SWIG)
IF(SWIG_FOUND)
    INCLUDE(${SWIG_USE_FILE})

    FIND_PACKAGE(PythonLibs REQUIRED)
    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
    
    EXECUTE_PROCESS(COMMAND
        python -c "import mpi4py; print mpi4py.get_include()"
        OUTPUT_VARIABLE Mpi4Py_INCLUDE_PATH
        ERROR_VARIABLE  Mpi4Py_INCLUDE_ERROR
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    INCLUDE_DIRECTORIES(${Mpi4Py_INCLUDE_PATH})
    MESSAGE(STATUS "Found mpi4py: " ${Mpi4Py_INCLUDE_PATH})    

    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

    SET(CMAKE_SWIG_FLAGS "")

    SET_SOURCE_FILES_PROPERTIES(JuML.i PROPERTIES CPLUSPLUS ON)
    SET_SOURCE_FILES_PROPERTIES(JuML.i PROPERTIES SWIG_FLAGS  "-ignoremissing;-wall;-c++")
    SWIG_ADD_MODULE(JuML python JuML.i)
    SWIG_LINK_LIBRARIES(JuML ${PYTHON_LIBRARIES} preprocessing classification)
ENDIF(SWIG_FOUND)
