# Test for GAUSSIAN_NAIVE_BAYES
#ADD_EXECUTABLE(GAUSSIAN_NAIVE_BAYES_TEST GaussianNaiveBayes.cpp)
#TARGET_LINK_LIBRARIES(GAUSSIAN_NAIVE_BAYES_TEST classification gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
#ADD_MPI_TEST(GAUSSIAN_NAIVE_BAYES_TEST GAUSSIAN_NAIVE_BAYES_TEST 4)

# Test for A_N_N
ADD_EXECUTABLE(A_N_N_TEST ANN.cpp)
TARGET_LINK_LIBRARIES(A_N_N_TEST classification gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(A_N_N_TEST A_N_N_TEST 1)
