# Test for GAUSSIAN_NAIVE_BAYES
ADD_EXECUTABLE(GAUSSIAN_NAIVE_BAYES_TEST GaussianNaiveBayes.cpp)
TARGET_LINK_LIBRARIES(GAUSSIAN_NAIVE_BAYES_TEST classification gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(GAUSSIAN_NAIVE_BAYES_TEST GAUSSIAN_NAIVE_BAYES_TEST 4)

# Test for ANN
ADD_EXECUTABLE(ANN_TEST ANN.cpp)
TARGET_LINK_LIBRARIES(ANN_TEST classification gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(ANN_TEST ANN_TEST 1)
