# Test for GAUSSIAN_NAIVE_BAYES
ADD_EXECUTABLE(GAUSSIAN_NAIVE_BAYES_TEST GaussianNaiveBayes.cpp)
TARGET_LINK_LIBRARIES(GAUSSIAN_NAIVE_BAYES_TEST classification gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(GAUSSIAN_NAIVE_BAYES_TEST GAUSSIAN_NAIVE_BAYES_TEST 4)

ADD_EXECUTABLE(CART_TEST CART.cpp)
TARGET_LINK_LIBRARIES(CART_TEST classification gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(CART_TEST CART_TEST 4)
