# Test for HDF5
ADD_EXECUTABLE(HDF5_TEST HDF5.cpp)
TARGET_LINK_LIBRARIES(HDF5_TEST core gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} ${HDF5_LIBRARIES})
ADD_TEST(HDF5_TEST HDF5_TEST)
# Test for DISTRIBUTIONS
ADD_EXECUTABLE(MPI_TEST MPI.cpp)
TARGET_LINK_LIBRARIES(MPI_TEST gtest gtest_main ${CMAKE_THREAD_LIBS_INIT} ${AF_LIBS} core)
ADD_MPI_TEST(MPI_TEST MPI_TEST 1 2 5 8)
