# Test for KERNEL
ADD_EXECUTABLE(KERNEL_TEST Kernel.cpp)
TARGET_LINK_LIBRARIES(KERNEL_TEST svm gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(KERNEL_TEST KERNEL_TEST 1)
# Test for KERNEL_CACHE
ADD_EXECUTABLE(KERNEL_CACHE_TEST KernelCache.cpp)
TARGET_LINK_LIBRARIES(KERNEL_CACHE_TEST svm gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(KERNEL_CACHE_TEST KERNEL_CACHE_TEST 1)
# Test for BINARY_S_V_C
ADD_EXECUTABLE(BINARY_SVC_TEST BinarySVC.cpp)
TARGET_LINK_LIBRARIES(BINARY_SVC_TEST svm gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
ADD_MPI_TEST(BINARY_SVC_TEST BINARY_SVC_TEST 1)
